; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_scripting-banner.c_register_script_for_port.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_scripting-banner.c_register_script_for_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Banner1 = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.ProtocolParserStream** }
%struct.ProtocolParserStream = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"SCRIPTING: using port %d\0A\00", align 1
@banner_scripting = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Banner1*, i32)* @register_script_for_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_script_for_port(%struct.Banner1* %0, i32 %1) #0 {
  %3 = alloca %struct.Banner1*, align 8
  %4 = alloca i32, align 4
  store %struct.Banner1* %0, %struct.Banner1** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @LOG(i32 0, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load %struct.Banner1*, %struct.Banner1** %3, align 8
  %8 = getelementptr inbounds %struct.Banner1, %struct.Banner1* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.ProtocolParserStream**, %struct.ProtocolParserStream*** %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.ProtocolParserStream*, %struct.ProtocolParserStream** %10, i64 %12
  store %struct.ProtocolParserStream* bitcast (i32* @banner_scripting to %struct.ProtocolParserStream*), %struct.ProtocolParserStream** %13, align 8
  ret void
}

declare dso_local i32 @LOG(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
